added exception handling with journey status. Tests for exception with journeyStatus and CallStatus still needs to be implemented.