@@ -25,7 +25,6 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 import static de.blackforestsolutions.apiservice.service.supportservice.HttpCallBuilder.buildUrlWith;
-import static java.util.Collections.EMPTY_LIST;
 
 @Service
 @Slf4j
@@ -55,7 +54,7 @@ public class BahnJourneyDetailsServiceImpl implements BahnJourneyDetailsService 
             return new CallStatus<>(map(result.getBody()), Status.SUCCESS, null);
         } catch (Exception e) {
             log.error("Error during calling Deutsche Bahn api", e);
-            return new CallStatus<>(Collections.singletonMap(uuidService.createUUID(), JourneyStatusBuilder.createJourneyStatusProblemWith(List.of(e), EMPTY_LIST)), Status.FAILED, e);
+            return new CallStatus<>(Collections.singletonMap(uuidService.createUUID(), JourneyStatusBuilder.createJourneyStatusProblemWith(List.of(e), Collections.emptyList())), Status.FAILED, e);
         }
     }
 
